# doxygen-mcp

./: .gitattributes  .gitignore  CLAUDE.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
hooks/: ci-check.sh  commit-msg  pre-commit  pre-push
src/doxygen_mcp/: __init__.py  server.py
tests/: test_server.py
