[project]
name = "doxygen-mcp"
dynamic = ["version"]
description = "A comprehensive Model Context Protocol (MCP) server that provides full access to Doxygen's documentation generation capabilities."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "COPYING.md" }
authors = [
    { name = "Positronikal", email = "hoyt.harness@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "doxygen", "documentation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "lxml>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "safety>=3.0.0",
]

full = [
    "regex>=2022.0.0",
    "configparser>=5.0.0",
    "coloredlogs>=15.0.0",
    "watchdog>=2.1.0",
    "jsonschema>=4.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is the normal idiom in pytest test files

[project.scripts]
doxygen-mcp = "doxygen_mcp.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/doxygen_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/doxygen_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=doxygen_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
relative_files = true
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
